--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <base href="/" />
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -31,13 +32,13 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="%PUBLIC_URL%/CSS/styles.css"/>
-    <link rel="stylesheet" href="%PUBLIC_URL%/CSS/login.css"/>
-    <link rel="stylesheet" href="%PUBLIC_URL%/CSS/payment.css"/>
-    <link rel="stylesheet" href="%PUBLIC_URL%/CSS/registration.css"/>
-    <link rel="stylesheet" href="%PUBLIC_URL%/CSS/studentVerification.css"/>
-    <link rel="stylesheet" href="%PUBLIC_URL%/CSS/notifications.css"/>
-    <link rel="stylesheet" href="%PUBLIC_URL%/CSS/dashboard.css"/>
+    <link rel="stylesheet" href="%PUBLIC_URL%/CSS/styles.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/CSS/login.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/CSS/payment.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/CSS/registration.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/CSS/studentVerification.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/CSS/notifications.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/CSS/dashboard.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -46,7 +47,6 @@
       rel="stylesheet"
     />
 
-    
     <title>C2Hire Corporate</title>
   </head>
   <body>
